# dupfiles

./: .gitignore  Dockerfile  README.Docker.md  README.md  TASK.md  ascidoc.txt  compose.yaml  config.json  current_context.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: db.py  scanner.py
static/: index.html
testdata/: README.md  notes.txt
testdata/backup/: archive.tmp  report.txt
testdata/docs/: summary.txt
testdata/images/: Thumbs.db
tests/: conftest.py  test_api.py  test_db.py  test_scanner.py
